--- a/src/NETStandard.WindowsCE/Properties/Resources.resx
+++ b/src/NETStandard.WindowsCE/Properties/Resources.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AggregateException_ctor_DefaultMessage" xml:space="preserve">
     <value>One or more errors occurred.</value>
@@ -131,5 +131,50 @@
   </data>
   <data name="SpinWait_SpinUntil_TimeoutWrong" xml:space="preserve">
     <value>The timeout must represent a value between -1 and Int32.MaxValue, inclusive.</value>
+  </data>
+  <data name="ArgumentOutOfRange_InvalidThreshold" xml:space="preserve">
+    <value>The specified threshold for creating dictionary is out of range.</value>
+  </data>
+  <data name="Argument_ItemNotExist" xml:space="preserve">
+    <value>The specified item does not exist in this KeyedCollection.</value>
+  </data>
+  <data name="Argument_AddingDuplicate" xml:space="preserve">
+    <value>An item with the same key has already been added. Key: {0}</value>
+  </data>
+  <data name="Arg_NonZeroLowerBound" xml:space="preserve">
+    <value>The lower bound of target array must be zero.</value>
+  </data>
+  <data name="Arg_ArrayPlusOffTooSmall" xml:space="preserve">
+    <value>Destination array is not long enough to copy all the items in the collection. Check array index and length.</value>
+  </data>
+  <data name="ArgumentOutOfRange_NeedNonNegNum" xml:space="preserve">
+    <value>Non-negative number required.</value>
+  </data>
+  <data name="IndexCannotBeNegative" xml:space="preserve">
+    <value>Index cannot be negative.</value>
+  </data>
+  <data name="NotSupported_ReadOnlyCollection" xml:space="preserve">
+    <value>Collection is read-only.</value>
+  </data>
+  <data name="ObservableCollectionReentrancyNotAllowed" xml:space="preserve">
+    <value>Cannot change ObservableCollection during a CollectionChanged event.</value>
+  </data>
+  <data name="WrongActionForCtor" xml:space="preserve">
+    <value>Constructor supports only the '{0}' action.</value>
+  </data>
+  <data name="MustBeResetAddOrRemoveActionForCtor" xml:space="preserve">
+    <value>Constructor only supports either a Reset, Add, or Remove action.</value>
+  </data>
+  <data name="ResetActionRequiresNullItem" xml:space="preserve">
+    <value>Reset action must be initialized with no changed items.</value>
+  </data>
+  <data name="ResetActionRequiresIndexMinus1" xml:space="preserve">
+    <value>Reset action must be initialized with index -1.</value>
+  </data>
+  <data name="Arg_RankMultiDimNotSupported" xml:space="preserve">
+    <value>Only single dimensional arrays are supported for the requested action.</value>
+  </data>
+  <data name="Argument_InvalidArrayType" xml:space="preserve">
+    <value>Target array type is not compatible with the type of items in the collection.</value>
   </data>
 </root>
